[gd_scene load_steps=9 format=2]

[ext_resource path="res://asset/fonts/kirifont/KiriFont.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Ajuste.gd" type="Script" id=2]
[ext_resource path="res://fondo.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[node name="Ajustes" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -150.0
margin_right = 50.0
margin_bottom = 150.0
size_flags_vertical = 3
custom_constants/separation = 30
alignment = 1

[node name="text_music" type="Label" parent="VBoxContainer"]
margin_top = 38.0
margin_right = 110.0
margin_bottom = 55.0
custom_colors/font_color = Color( 0.282353, 0.752941, 0.282353, 1 )
custom_fonts/font = SubResource( 1 )
text = "Musica"
align = 1

[node name="On_musica" type="Button" parent="VBoxContainer"]
margin_top = 85.0
margin_right = 110.0
margin_bottom = 108.0
custom_colors/font_color_focus = Color( 0.192157, 0.643137, 0.192157, 1 )
custom_colors/font_color = Color( 0.145098, 0.145098, 0.145098, 1 )
custom_colors/font_color_hover = Color( 0.282353, 0.752941, 0.282353, 1 )
custom_colors/font_color_pressed = Color( 0.282353, 0.752941, 0.282353, 1 )
custom_fonts/font = SubResource( 4 )
text = "ON"
flat = true

[node name="text_sound" type="Label" parent="VBoxContainer"]
margin_top = 138.0
margin_right = 110.0
margin_bottom = 155.0
custom_colors/font_color = Color( 0.282353, 0.752941, 0.282353, 1 )
custom_fonts/font = SubResource( 2 )
text = "Sonido"
align = 1

[node name="On_sound" type="Button" parent="VBoxContainer"]
margin_top = 185.0
margin_right = 110.0
margin_bottom = 208.0
custom_colors/font_color_disabled = Color( 0.192157, 0.643137, 0.192157, 1 )
custom_colors/font_color = Color( 0.145098, 0.145098, 0.145098, 1 )
custom_colors/font_color_hover = Color( 0.282353, 0.752941, 0.282353, 1 )
custom_colors/font_color_pressed = Color( 0.282353, 0.752941, 0.282353, 1 )
custom_fonts/font = SubResource( 5 )
text = "ON"
flat = true

[node name="Regresar" type="Button" parent="VBoxContainer"]
margin_top = 238.0
margin_right = 110.0
margin_bottom = 261.0
custom_colors/font_color_focus = Color( 0.192157, 0.643137, 0.192157, 1 )
custom_colors/font_color = Color( 0.282353, 0.752941, 0.282353, 1 )
custom_colors/font_color_hover = Color( 0.282353, 0.752941, 0.282353, 1 )
custom_colors/font_color_pressed = Color( 0.282353, 0.752941, 0.282353, 1 )
custom_fonts/font = SubResource( 3 )
text = "Regresar"
flat = true

[node name="ParallaxBackground" parent="." instance=ExtResource( 3 )]

[connection signal="pressed" from="VBoxContainer/On_musica" to="." method="_on_On_musica_pressed"]
[connection signal="pressed" from="VBoxContainer/Regresar" to="." method="_on_Regresar_pressed"]
